--- a/src/views/admin/home.ejs
+++ b/src/views/admin/home.ejs
@@ -7,14 +7,14 @@
                 <ul>
                     <li>
                         <!-- href="/admin/markin" -->
-                        <a class="">
+                        <a class="" href="/admin/markin">
                             <img src="/img/vertical.png" alt="vertical">
                             Mark-In
                         </a>
                     </li>
                     <li>
                         <!-- href="/admin/markout" -->
-                        <a>
+                        <a href="/admin/markout">
                             <img src="/img/24.png" alt="zonal">
                             Mark-Out
                         </a>
